; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_wiiu.c_frontend_wiiu_parse_drive_list.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_wiiu.c_frontend_wiiu_parse_drive_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR = common dso_local global i32 0, align 4
@MSG_UNKNOWN = common dso_local global i32 0, align 4
@WIIU_SD_PATH = common dso_local global i32 0, align 4
@FILE_TYPE_DIRECTORY = common dso_local global i32 0, align 4
@WIIU_USB_PATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @frontend_wiiu_parse_drive_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @frontend_wiiu_parse_drive_list(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  br label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @MSG_UNKNOWN, align 4
  br label %16

16:                                               ; preds = %14, %12
  %17 = phi i32 [ %13, %12 ], [ %15, %14 ]
  store i32 %17, i32* %7, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %16
  store i32 -1, i32* %3, align 4
  br label %36

21:                                               ; preds = %16
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @WIIU_SD_PATH, align 4
  %24 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  %25 = call i32 @msg_hash_to_str(i32 %24)
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* @FILE_TYPE_DIRECTORY, align 4
  %28 = call i32 @menu_entries_append_enum(i32* %22, i32 %23, i32 %25, i32 %26, i32 %27, i32 0, i32 0)
  %29 = load i32*, i32** %6, align 8
  %30 = load i32, i32* @WIIU_USB_PATH, align 4
  %31 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  %32 = call i32 @msg_hash_to_str(i32 %31)
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* @FILE_TYPE_DIRECTORY, align 4
  %35 = call i32 @menu_entries_append_enum(i32* %29, i32 %30, i32 %32, i32 %33, i32 %34, i32 0, i32 0)
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %21, %20
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @menu_entries_append_enum(i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
